[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-editor"
version = "0.1.0"
description = "AI-powered video editing tool using OpenShot and natural language prompts"
authors = [
    {name = "B3n 5m17h"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["video", "editing", "ai", "openshot", "libopenshot"]

# Core dependencies - starting minimal
dependencies = [
    "openshot-qt>=3.1.0",  # OpenShot's Python library
]

# Development tools
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/ben-tsmith/ai-video-editor"
Repository = "https://github.com/ben-tsmith/ai-video-editor"
Issues = "https://github.com/ben-tsmith/ai-video-editor/issues"

# Package discovery
[tool.setuptools.packages.find]
where = ["src"]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
